--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/jimp": "^0.2.28",
+    "@types/qrcode": "^1.5.6"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -12,6 +14,7 @@
   "dependencies": {
     "baileys": "7.0.0-rc.9",
     "colors": "^1.4.0",
+    "jimp": "^1.6.0",
     "node-cache": "^5.1.2",
     "qrcode": "^1.5.4"
   }
