--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "baileys": "7.0.0-rc.9",
     "colors": "^1.4.0",
     "jimp": "^1.6.0",
