--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "axios": "^1.13.2",
     "baileys": "7.0.0-rc.9",
     "colors": "^1.4.0",
     "jimp": "^1.6.0",
     "node-cache": "^5.1.2",
+    "ping": "^1.0.0",
     "qrcode": "^1.5.4"
   }
 }
